Bug 746775 - Clicks to close a context-menu in a panel are also consumed by the panel. r=jmathies,enndeakin.